# numerical_methods

./: CMakeLists.txt
include/: abstract_solver.h  command_line_parser.h  cubic_spline.h  dirichlet_task.h  eulerian_solver.h  mpi_solver.h  plot.h  runge_kutta_solver.h  system_solver.h  table_printer.h
lab/: CMakeLists.txt  diff_equations.cc  dirichlet_task.cc  dirichlet_task.h  heat_equation_lab.cc  integration.cc  jacobi_method_lab.cc  mpi_combined_areas.cc  mpi_with_optim_step_lab.cc
src/: abstract_solver.cc  command_line_parser.cc  cubic_spline.cc  dirichlet_task.cc  eulerian_solver.cc  main.cc  main_cubic_spline.cc  main_heat_equation.cc  mpi_solver.cc  plot.cc  runge_kutta_solver.cc  system_solver.cc  table_printer.cc
